test/compile-fail/scope/multiple-definition-many/expected.txt
error: the name `a` is defined multiple times
 --> top.rhdl:1:7
  |
1 | struct a {}
  |        ^ previous definition of the type `a` here
2 | enum a {}
  |      - `a` redefined here
error: the name `a` is defined multiple times
 --> top.rhdl:2:5
  |
2 | enum a {}
  |      ^ previous definition of the type `a` here
3 | union a {}
  |       - `a` redefined here
error: the name `a` is defined multiple times
 --> top.rhdl:3:6
  |
3 | union a {}
  |       ^ previous definition of the type `a` here
4 | trait a {}
  |       - `a` redefined here
